-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2025-08-16T20:52:34.919Z

CREATE TABLE "users" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "email" text UNIQUE NOT NULL,
  "first_name" text NOT NULL,
  "last_name" text NOT NULL,
  "display_name" text DEFAULT 'concat(first_name, ' ', last_name)',
  "created_at" timestamp DEFAULT 'now()',
  "updated_at" timestamp DEFAULT 'now()'
);

CREATE TABLE "user_roles" (
  "user_id" bigint NOT NULL,
  "role_id" bigint NOT NULL
);

CREATE TABLE "roles" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text UNIQUE NOT NULL,
  "identifier" text UNIQUE NOT NULL
);

CREATE TABLE "yarn" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "brand_id" integer NOT NULL,
  "manufacturer_id" integer NOT NULL,
  "material_id" integer NOT NULL,
  "color" color,
  "lot_number" text,
  "length_in_meters" float NOT NULL,
  "weight_in_grams" float NOT NULL,
  "thickness_id" integer NOT NULL,
  "created_at" timestamp DEFAULT 'now()',
  "updated_at" timestamp DEFAULT 'now()'
);

CREATE TABLE "materials" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "description" text NOT NULL,
  "fiber_id" bigint NOT NULL,
  "created_at" timestamp DEFAULT 'now()',
  "updated_at" timestamp DEFAULT 'now()'
);

CREATE TABLE "thicknesses" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "weight_number" integer NOT NULL,
  "name" text NOT NULL,
  "description" text NOT NULL,
  "circumference" float NOT NULL,
  "created_at" timestamp DEFAULT 'now()',
  "updated_at" timestamp DEFAULT 'now()'
);

CREATE TABLE "brands" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "identifier" text NOT NULL,
  "description" text NOT NULL,
  "created_at" timestamp DEFAULT 'now()',
  "updated_at" timestamp DEFAULT 'now()'
);

CREATE TABLE "manufacturers" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "identifier" text NOT NULL,
  "description" text NOT NULL,
  "created_at" timestamp DEFAULT 'now()',
  "updated_at" timestamp DEFAULT 'now()'
);

CREATE TABLE "fibers" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "identifier" text NOT NULL,
  "created_at" timestamp DEFAULT 'now()',
  "updated_at" timestamp DEFAULT 'now()'
);

ALTER TABLE "user_roles" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "user_roles" ADD FOREIGN KEY ("role_id") REFERENCES "roles" ("id");

ALTER TABLE "yarn" ADD FOREIGN KEY ("brand_id") REFERENCES "brands" ("id");

ALTER TABLE "yarn" ADD FOREIGN KEY ("manufacturer_id") REFERENCES "manufacturers" ("id");

ALTER TABLE "yarn" ADD FOREIGN KEY ("material_id") REFERENCES "materials" ("id");

ALTER TABLE "yarn" ADD FOREIGN KEY ("thickness_id") REFERENCES "thicknesses" ("id");

ALTER TABLE "materials" ADD FOREIGN KEY ("fiber_id") REFERENCES "fibers" ("id");
